Optional swift_newtype types are @objc if the raw type would be @objc.

This was causing issues where the compiler rejected overrides of
imported members as being non-ObjC-compatible, even though the type
was exactly the same as what the Clang importer was using.

https://bugs.swift.org/browse/SR-2344